--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "13.4.0"
   },
