--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.5",
     "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
@@ -19,12 +20,14 @@
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
+    "firebase": "^9.19.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
