--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "expo-location": "~15.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.3",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.19.1",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-shadow": "^1.2.2",
